Search user and Sort users

--- a/mobile-ui/src/main/res/values/strings.xml
+++ b/mobile-ui/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="button_check_again">Check again</string>
     <string name="button_try_again">Try again</string>
     <string name="title_activity_user_detail">UserDetailActivity</string>
+    <string name="search">Search</string>
+    <string name="sort">Sort</string>
 </resources>
