--- a/mobile-ui/src/main/res/values/strings.xml
+++ b/mobile-ui/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="title_activity_user_detail">UserDetailActivity</string>
     <string name="search">Search</string>
     <string name="sort">Sort</string>
+    <string name="stars">Stars</string>
+    <string name="followers">Followers</string>
+    <string name="following">Following</string>
+    <string name="add_to_favorites">Add to favorites</string>
+    <string name="repositories">Repositories</string>
 </resources>
